# market-brief

./: .gitattributes  .gitignore  LICENSE  README.md  SETUP-GUIDE.md  SKILL.md  hermes-py.ps1  install-listener.ps1  install-stock-mcp.ps1  install-twitter-mcp.ps1  listen_weixin.py  prompt.template.md  push_weixin.py  quickstart-mac.sh  quickstart.ps1  run-hidden.vbs  run-listener.ps1  run.ps1  run.sh  schedule-install.ps1  twitter_playwright_mcp.py
chat-mcp-setup/: .gitignore  SKILL.md
chat-mcp-setup/client/: install-client.sh
chat-mcp-setup/host/macos/discord-selfbot/: .env.example  com.discord-selfbot.daemon.plist  install-daemon.sh  pyproject.toml  server.py  start.sh  uninstall-daemon.sh
config/: memory.template.md  prompt.template.md  secrets.example.json
launchd/: com.ouyadi.market-brief.plist  com.ouyadi.weixin-listener.plist
mcp/: ANTIBOT_PLAYBOOK.md  _mcp_auth.py  applier.py  brief_image.py  brief_image_gpt.py  defeatbeta_mcp.py  discord_image_ocr.py  financialjuice_mcp.py  finnhub_mcp.py  fred_mcp.py  gdelt_mcp.py  listen_weixin.py  order_flow.py  polymarket_mcp.py  push_weixin.py  qr_login_bootstrap.py  sec_edgar_mcp.py  sec_flows_mcp.py  seekingalpha_rss_mcp.py  selfevolve.py  selfevolve_scheduler.py  sentiment_mcp.py  shorts_mcp.py  stock_price_mcp.py  test_order_flow.py  tradier_mcp.py  twitter_playwright_mcp.py
mcp-bundle/: Dockerfile  requirements.txt  supervisord.conf
scripts/macos/: quickstart-mac.sh  run.sh
scripts/windows/: install-financialjuice-mcp.ps1  install-listener.ps1  install-polymarket-mcp.ps1  install-selfevolve-scheduler.ps1  (+7 more)
(+15 files in other folders)
